fix an error linking the css page and add comments to the css page.

--- a/test.html
+++ b/test.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="css/styles.css" type="stylesheet">
+  <link rel="stylesheet" href="css/styles.css"> type="stylesheet">
   <title></title>
 </head>
 <body>
-    <!--this is a template for a horizontal navigation bar-->
   <div class="horizontal_nav">
     <nav>
       <a href="index.html">Home</a>
