--- a/nav.html
+++ b/nav.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="css/styles.css" type="stylesheet">
+  <link rel="stylesheet" href="css/styles.css"> type="stylesheet">
   <title></title>
 </head>
 <body>
