optimized for oneplus 6t

--- a/test.html
+++ b/test.html
@@ -18,16 +18,16 @@
       <h1>This page is for testing new code.</h1>
     </div>
     <div class="contentbox">
-     <p>this is test stuff for testing stuff such as this. it should be known that this test stuff is basically pointless and doesn't really mean much. I exists just to fill space. if it does it's job correctly I won't have to add Lorem Ipsum to this page, but if it fails I will be forced to add Lorem Ipsum and other random text. Please don't let me down useless text. My sanity depends on your stupidity.</p>
+     <p>this is test stuff for testing stuff such as this. it should be known that this test stuff is basically pointless and doesn't really mean much. I exists just to fill space. if it does its job correctly I won't have to add Lorem Ipsum to this page, but if it fails I will be forced to add Lorem Ipsum and other random text. Please don't let me down useless text. My sanity depends on your stupidity.</p>
     </div>
     <div class="contentbox">
-     <p>this is test stuff for testing stuff such as this. it should be known that this test stuff is basically pointless and doesn't really mean much. I exists just to fill space. if it does it's job correctly I won't have to add Lorem Ipsum to this page, but if it fails I will be forced to add Lorem Ipsum and other random text. Please don't let me down useless text. My sanity depends on your stupidity.</p>
+     <p>this is test stuff for testing stuff such as this. it should be known that this test stuff is basically pointless and doesn't really mean much. I exists just to fill space. if it does its job correctly I won't have to add Lorem Ipsum to this page, but if it fails I will be forced to add Lorem Ipsum and other random text. Please don't let me down useless text. My sanity depends on your stupidity.</p>
     </div>
     <div class="contentbox">
-     <p>this is test stuff for testing stuff such as this. it should be known that this test stuff is basically pointless and doesn't really mean much. I exists just to fill space. if it does it's job correctly I won't have to add Lorem Ipsum to this page, but if it fails I will be forced to add Lorem Ipsum and other random text. Please don't let me down useless text. My sanity depends on your stupidity.</p>
+     <p>this is test stuff for testing stuff such as this. it should be known that this test stuff is basically pointless and doesn't really mean much. I exists just to fill space. if it does its job correctly I won't have to add Lorem Ipsum to this page, but if it fails I will be forced to add Lorem Ipsum and other random text. Please don't let me down useless text. My sanity depends on your stupidity.</p>
     </div>
     <div class="contentbox">
-     <p>this is test stuff for testing stuff such as this. it should be known that this test stuff is basically pointless and doesn't really mean much. I exists just to fill space. if it does it's job correctly I won't have to add Lorem Ipsum to this page, but if it fails I will be forced to add Lorem Ipsum and other random text. Please don't let me down useless text. My sanity depends on your stupidity.</p>
+     <p>this is test stuff for testing stuff such as this. it should be known that this test stuff is basically pointless and doesn't really mean much. I exists just to fill space. if it does its job correctly I won't have to add Lorem Ipsum to this page, but if it fails I will be forced to add Lorem Ipsum and other random text. Please don't let me down useless text. My sanity depends on your stupidity.</p>
     </div>
   </div>
 </body>
