--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
   <div class="container">
     <div class="contentbox">
-     <p>This page is the home page. From here you can go to anywhere else you would like.</p>
+     <h1>This page is the home page. From here you can go to anywhere else you would like.</h1>
     </div>
   </div>
 </body>
