try something new

--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="css/styles.css" type="text/css">
-  <title></title>
+  <title>Test</title>
 </head>
 <body>
   <div class="horizontal_nav">
